--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Roboto", "Courier New", Courier, monospace;
+  font-family: "Roboto", "Arial", Courier, monospace;
 }
 
 header {
@@ -14,7 +14,9 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 105px;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
 }
 
 header .menu {
@@ -106,22 +108,37 @@ header .menu ul li a {
           flex-direction: column;
 }
 
-.section2 .contenu1 {
-  padding: 1.5em 6em;
+.section2 .wrapp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section2 .wrapp .contenu1 {
+  padding: 1.5em 0em;
+  max-width: 55%;
   font-size: 1.5em;
   text-align: center;
 }
 
 .section2 .contenu2 {
-  margin: 0px 20%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .section2 .contenu2 .cards {
   padding: 1em;
   margin: 0px 15px;
+  width: 244px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -147,9 +164,23 @@ header .menu ul li a {
   font-size: 14px;
 }
 
-.section2 .info {
+.section2 .contenu3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section2 .contenu3 .info {
   font-size: 20px;
-  padding: 1.5em 14em;
+  padding: 1.5em 0em;
+  width: 50%;
   text-align: center;
 }
 
@@ -205,8 +236,37 @@ footer .foot3 .links div {
 footer .foot3 .links div ul {
   margin: 8px;
   position: relative;
-  color: rgba(255, 255, 255, 0.82);
   font-weight: 600;
   left: 2em;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+footer .foot3 .links div ul li a {
+  color: rgba(255, 255, 255, 0.82);
+  text-decoration: none;
+}
+
+@media screen and (max-width: 750px) {
+  .header {
+    border: 2px solid blue;
+  }
+  header .logo_ img {
+    width: 100%;
+  }
+  .section2 .wrapp .contenu1 {
+    max-width: 80%;
+  }
+  .section2 .contenu3 .info {
+    width: 80%;
+  }
+  footer .foot3 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
